--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     Criar 3 projetos usando JavaScript
                 </h2>
                 <h3 class="aba-conteudo-titulo-secundario">
-                    TEMPO PARA CONCLUIR O OBJETIVO
+                    Tempo para concluir o objetivo
                 </h3>
             </div>
             <div class="aba-conteudo">
